<?xml version="1.0"?>
<package format="3">
  <name>navyu_choreonoid</name>
  <version>0.1.0</version>
  <description>The navyu_choreonoid package</description>
  <maintainer email="ryu.yamamoto@tier4.jp">RyuYamamoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>launch_ros</depend>
  <depend>launch_xml</depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <build_depend>yaml-cpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
